Fix text color contrast

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,8 @@
+:root {
+  --white: rgb(238, 238, 238);
+  --light-gray: rgb(204, 204, 204);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -38,12 +43,12 @@ header {
 
 .header-logo i {
   font-size: 2.5rem;
-  color: #eeeeee;
+  color: var(--white);
 }
 
 nav i {
   font-size: 1.8rem;
-  color: #eeeeee;
+  color: var(--white);
 }
 
 main {
@@ -51,6 +56,7 @@ main {
   width: 100%;
   min-height: 100vh;
   padding-top: 80px;
+  color: var(--white);
 }
 
 .intro {
@@ -62,7 +68,6 @@ main {
 .intro-container {
   width: 70%;
   margin: auto;
-  color: #aaaaaa;
 }
 
 .intro .summary {
@@ -134,13 +139,11 @@ main {
 }
 
 .card-title {
-  color: #aaaaaa;
   font-size: 1.7rem;
   font-weight: 600;
 }
 
 .card-title:hover {
-  color: #cfcfcf;
   text-decoration: underline;
 }
 
@@ -154,7 +157,6 @@ main {
   line-clamp: 3;
   overflow: hidden;
   text-overflow: ellipsis;
-  color: #7a8288;
   font-weight: 600;
 }
 
@@ -174,13 +176,13 @@ main {
   font-size: 1rem;
   padding: 3px 10px;
   border-radius: 8px;
-  background-color: #7a8288;
+  background-color: var(--light-gray);
   color: #000;
   font-weight: 700;
 }
 
 .card-category {
-  color: #7a8288;
+  color: var(--light-gray);
   text-transform: lowercase;
   font-style: italic;
 }
@@ -204,7 +206,7 @@ footer {
 }
 
 .footer-container .creator {
-  color: #7a8288;
+  color: var(--light-gray);
   font-size: 1.3rem;
   margin-bottom: 5px;
   font-weight: 600;
@@ -212,7 +214,7 @@ footer {
 
 .footer-container .license {
   font-size: 1rem;
-  color: #aaaaaa;
+  color: var(--light-gray);
   font-weight: 600;
 }
 
